[package]
name = "cluExtIO"
version = "0.1.2"
authors = ["Денис Котляров <#Ulin Project 18, denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluExtIO.git"
license = " Apache-2.0"
readme = "README.md"

keywords = ["extio", "cluextio", "extension_in_out", "clucompany"]
categories = ["development-tools"]

description = "Syntactic sugar extends I/O capabilities."



[dependencies]
