[package]
name = "cluExtIO"
version = "0.3.0"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluExtIO.git"
license = " Apache-2.0"
readme = "README.md"
edition = "2018"

keywords = ["extio", "cluextio", "extension_in_out", "clucompany"]
categories = ["development-tools"]

description = "Syntactic sugar extends I/O capabilities."

[dependencies]
